# munix

./: .gitignore  README.md  flake.nix
config/: album.nix.template.nix  flake.nix  metadata.toml.template.nix
docs/: album.nix  config.nix
docs/wip/: config.nix
nix/: docs.album.nix  mock.album.nix
rust/: Cargo.toml
rust/libmue/src/: utils.rs
rust/libmuet/: Cargo.toml
rust/libmuet/src/: config.rs  lib.rs  remote.rs  utils.rs
rust/libmute/: Cargo.toml
rust/libmute/src/: config.rs  remote.rs  utils.rs
rust/mue/: Cargo.toml
rust/mue/src/: build.rs  fetch.rs  library.rs  main.rs
rust/muet/: Cargo.toml
rust/muet/src/: build.rs  fetch.rs  main.rs  manifest.rs
rust/muex/: Cargo.toml
rust/muex/src/: discid.rs  main.rs
rust/mute/: Cargo.toml
rust/mute/src/: main.rs
rust/mute/src/album/: build.rs  fetch.rs  manifest.rs  mod.rs
rust/mute/src/film/: build.rs  fetch.rs  manifest.rs  mod.rs
rust/mutex/: Cargo.toml
rust/mutex/src/: discid.rs  main.rs
rust/src/: config.rs  main.rs  utils.rs
rust/src/fetch/: mod.rs
rust/src/manifest/: mod.rs
