[package]
name = "munix"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
alphanumeric-sort = "1.5"
dirs = "5.0"
globset = "0.4.18"
log = "0.4"
simple_logger = "5.0"
lava_torrent = "0.9"
