[package]
name = "libmuet"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
alphanumeric-sort = "1.5"
dirs = "5.0"
globset = "0.4.18"
log = "0.4"
lava_torrent = "0.9"
toml = "1.1"
sha1 = "0.10"
base64 = "0.22"
metaflac = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
regex = "1.10"
dotenvy = "0.15"
