[package]
name = "muet"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
simple_logger = "5.0"
serde_json = "1.0"
lava_torrent = "0.9"
toml = "1.1"
alphanumeric-sort = "1.5"
libmuet = { path = "../libmuet" }
